Update file style.css and modify layout in index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class = "main">
+        <div class = "menu">
+            <div class = "intro">
+                <p>Header Logo</p>
+            </div>
+            <ul>
+                <li>Header link one</li>
+                <li>Header link two</li>
+                <li>Header link three</li>
+            </ul>
+        </div>
+        <div class = "content">
+            <input type="text" placeholder="Input content here">
+            <ul class = "data">
+                <li>demo data</li>
+                <li>demo data</li>
+                <li>demo data</li>
+                <li>demo data</li>
+                <li>demo data</li>
+                <li>demo data</li>
+            </ul>
+        </div>
+    </div>
+    <footer>
+        <h3>This is the footer</h3>
+    </footer>
 </body>
 </html>
