--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class = "main">
-        <div class = "menu">
+        <!-- <div class = "menu">
             <div class = "intro">
                 <p>Header Logo</p>
             </div>
@@ -19,9 +19,9 @@
                 <li>Header link two</li>
                 <li>Header link three</li>
             </ul>
-        </div>
+        </div> -->
         <div class = "content">
-            <input type="text" placeholder="Input content here">
+            <input type="text" placeholder="Please enter here!">
             <ul class = "data">
                 <li>demo data</li>
                 <li>demo data</li>
