Modify style.css: Added 1 section_img div

--- a/index.html
+++ b/index.html
@@ -10,16 +10,6 @@
 </head>
 <body>
     <div class = "main">
-        <!-- <div class = "menu">
-            <div class = "intro">
-                <p>Header Logo</p>
-            </div>
-            <ul>
-                <li>Header link one</li>
-                <li>Header link two</li>
-                <li>Header link three</li>
-            </ul>
-        </div> -->
         <div class = "content">
             <input type="text" placeholder="Please enter here!">
             <ul class = "data">
@@ -30,6 +20,24 @@
                 <li>demo data</li>
                 <li>demo data</li>
             </ul>
+        </div>
+    </div>
+    <div class = "section_img">
+        <div class = "img" id = "no1">
+            <img src="img1.jpg" alt="">
+            <p>The 1st img</p>
+        </div>
+        <div class = "img" id = "no2">
+            <p>The 2nd img</p>
+            <img src="img2.jpg" alt="">
+        </div>
+        <div class = "img" id = "no3">
+            <img src="img3.jpg" alt="">
+            <p>The 3rd img</p>
+        </div>
+        <div class = "img" id = "no4">
+            <p>The 4th img</p>
+            <img src="img4.jpg" alt="">
         </div>
     </div>
     <footer>
